force-app/main/default/objects/CV_ASU_STDNT_TERM__x/CV_ASU_STDNT_TERM__x.object-meta.xml
<CustomObject>
    <description>Functional Documentation can be found here: https://docs.google.com/document/d/1w4Rx3o5mXo-sZzCTGeFh4EpEbVZD3h1aqDSnNeyUjK0/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>CV_ASU_STDNT_TERMs</externalName>
    <label>Persistence Outlook (external)</label>
    <pluralLabel>Persistence Outlook (external)</pluralLabel>
</CustomObject>