force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CAREER_SEGMENT__c.field-meta.xml
<CustomField>
    <fullName>CAREER_SEGMENT__c</fullName>
    <description>"U" (undergrad), "G" (grad), "N" (non-degree)</description>
    <externalDeveloperName>CAREER_SEGMENT</externalDeveloperName>
    <label>Career</label>
    <length>1</length>
    <type>Text</type>
</CustomField>