force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CHANGE_DIRECTION__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_DIRECTION__c</fullName>
    <description>New field</description>
    <externalDeveloperName>CHANGE_DIRECTION</externalDeveloperName>
    <label>Change Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>