force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CHANGE_FLG__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_FLG__c</fullName>
    <description>"Y" indicates a change in score should be highlighted, else "N". Subject to change: flag will be set to "Y" on the day student moves into a new Level (adjusted decile).</description>
    <externalDeveloperName>CHANGE_FLG</externalDeveloperName>
    <label>Change Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>