force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Persistence Outlook (external)</relationshipLabel>
    <relationshipName>Persistence_Outlook_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>