force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CURRENT_CONT_PREDICTION_VALUE__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_CONT_PREDICTION_VALUE__c</fullName>
    <description>Decimal number representing likelihood of continuation, defined as graduation or persistence from the prediction term</description>
    <externalDeveloperName>CURRENT_CONT_PREDICTION_VALUE</externalDeveloperName>
    <label>Current Prediction Value</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>