force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CURRENT_FLG__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_FLG__c</fullName>
    <description>"Y" for most recent (max) Snap_Date for this student, else "N"</description>
    <externalDeveloperName>CURRENT_FLG</externalDeveloperName>
    <label>Current Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>