force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/CURRENT_SEGMENT_DESCR__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_SEGMENT_DESCR__c</fullName>
    <description>Description of segment (see lookup table of descriptions), currently delivered by a case statement</description>
    <externalDeveloperName>CURRENT_LEVEL_DESCR</externalDeveloperName>
    <label>Current Segment Description</label>
    <length>9</length>
    <type>Text</type>
</CustomField>