force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/ONLINE_SEGMENT__c.field-meta.xml
<CustomField>
    <fullName>ONLINE_SEGMENT__c</fullName>
    <description>Online campus student "Y" or "N"</description>
    <externalDeveloperName>ONLINE_SEGMENT</externalDeveloperName>
    <label>Online Student</label>
    <length>1</length>
    <type>Text</type>
</CustomField>