force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/PREDICTION_SESSION_CODE__c.field-meta.xml
<CustomField>
    <fullName>PREDICTION_SESSION_CODE__c</fullName>
    <description>Indicates session in which continuation is being predicted. "C" for immersion students, "A" or "B" for online students</description>
    <externalDeveloperName>PREDICTION_SESSION_CODE</externalDeveloperName>
    <label>Prediction Session Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>