force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/PREDICTION_STRM__c.field-meta.xml
<CustomField>
    <fullName>PREDICTION_STRM__c</fullName>
    <description>Strm; indicates term in which continuation is being predicted</description>
    <externalDeveloperName>PREDICTION_STRM</externalDeveloperName>
    <label>Prediction Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Persistence Outlook (external)</relationshipLabel>
    <relationshipName>Persistence_Outlook_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>