force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/PREV_CONT_PREDICTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PREV_CONT_PREDICTION_DATE__c</fullName>
    <description>Date from which change in prediction segment was measured</description>
    <externalDeveloperName>PREV_CONT_PREDICTION_DATE</externalDeveloperName>
    <label>Previous Prediction Date</label>
    <type>Date</type>
</CustomField>