force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/PREV_CONT_PREDICTION_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>PREV_CONT_PREDICTION_LEVEL__c</fullName>
    <description>Integer representing relative likelihood of continuation (definitions may change)</description>
    <externalDeveloperName>PREV_CONT_PREDICTION_LEVEL</externalDeveloperName>
    <label>Previous Prediction Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>