force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/PREV_SEGMENT_DESCR__c.field-meta.xml
<CustomField>
    <fullName>PREV_SEGMENT_DESCR__c</fullName>
    <description>Description of segment (see lookup table of descriptions)</description>
    <externalDeveloperName>PREV_LEVEL_DESCR</externalDeveloperName>
    <label>Previous Segment Description</label>
    <length>9</length>
    <type>Text</type>
</CustomField>