force-app/main/default/objects/CV_ASU_STDNT_TERM__x/fields/SNAP_DATE__c.field-meta.xml
<CustomField>
    <fullName>SNAP_DATE__c</fullName>
    <description>Date of the score on this row (rows added daily, although scores may not change)</description>
    <externalDeveloperName>SNAP_DATE</externalDeveloperName>
    <label>Snap Date</label>
    <type>Date</type>
</CustomField>